--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,63 +8,107 @@
     android:padding="20dp"
     tools:context="com.example.adila.blowfish.MainActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Plaintext"/>
-    <EditText
-        android:id="@+id/plaintext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Key"/>
-    <EditText
-        android:id="@+id/key"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/encrypt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="encrypt"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="blowfish"/>
-    <TextView
-        android:id="@+id/ciphertext_blowfish"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="caesar"/>
-    <TextView
-        android:id="@+id/ciphertext_caesar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/decrypt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="decrypt"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="dekripsi caesar ke blowfish"/>
-    <TextView
-        android:id="@+id/decrypt_caesar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="dekripsi blowfish ke plaintext"/>
-    <TextView
-        android:id="@+id/decrypt_blowfish"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:orientation="vertical">
 
-</LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Plaintext"
+            android:textSize="16dp"
+            android:textColor="@color/colorPrimaryDark"/>
+        <EditText
+            android:id="@+id/plaintext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Key"
+            android:textSize="16dp"
+            android:textColor="@color/colorPrimaryDark"/>
+        <EditText
+            android:id="@+id/key"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/encrypt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="encrypt"
+            android:layout_marginVertical="16dp"
+            android:layout_gravity="center"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Plain Text -> Blowfish"
+            android:textSize="16dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginBottom="6dp"/>
+        <TextView
+            android:id="@+id/ciphertext_blowfish"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14dp"
+            android:layout_marginLeft="10dp" />
+        <TextView
+            style="@style/viewline"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Blowfish -> Caesar"
+            android:textSize="16dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginBottom="6dp"
+            android:layout_marginTop="10dp"/>
+        <TextView
+            android:id="@+id/ciphertext_caesar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14dp"
+            android:layout_marginLeft="10dp"/>
+        <TextView
+            style="@style/viewline"/>
+        <Button
+            android:id="@+id/decrypt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="decrypt"
+            android:layout_marginVertical="16dp"
+            android:layout_gravity="center"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Caesar -> Blowfish"
+            android:textSize="16dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginBottom="6dp"/>
+        <TextView
+            android:id="@+id/decrypt_caesar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14dp"
+            android:layout_marginLeft="10dp"/>
+        <TextView
+            style="@style/viewline"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Blowfish -> Plain Text"
+            android:textSize="16dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_marginBottom="6dp"
+            android:layout_marginTop="10dp"/>
+        <TextView
+            android:id="@+id/decrypt_blowfish"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14dp"
+            android:layout_marginLeft="10dp" />
+        <TextView
+            style="@style/viewline"/>
+
+    </LinearLayout>
+</ScrollView>
