--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Plain Text -> Blowfish"
+            android:text="Plaintext -> Blowfish"
             android:textSize="16dp"
             android:textColor="@color/colorPrimaryDark"
             android:layout_marginBottom="6dp"/>
@@ -96,7 +96,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Blowfish -> Plain Text"
+            android:text="Blowfish -> Plaintext"
             android:textSize="16dp"
             android:textColor="@color/colorPrimaryDark"
             android:layout_marginBottom="6dp"
